name:                deiko-config
version:             0.2.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Yorick Laupa
maintainer:          yo.eight@gmail.com
-- copyright:
stability:           experimental
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules:
        Text.Deiko.Config
    other-modules:
        Text.Deiko.Config.Core
        Text.Deiko.Config.Lexer
        Text.Deiko.Config.Parser
        Text.Deiko.Config.Semantic
        Text.Deiko.Config.Types
        Text.Deiko.Config.Util
    build-depends:
        base         >= 4.3      && < 5,
        bytestring   >= 0.9.2.1  && < 0.11,
        conduit      >= 0.5.2.7  && < 1.0.8,
        containers   >= 0.4.0    && < 0.6,
        free         >= 3.1.1    && < 3.5,
        hashable     >= 1.1.2.3  && < 1.3,
        mtl          >= 2.0.1    && < 2.2,
        resourcet    >= 0.3.3.1  && < 0.4.8,
        parsec       >= 3.1.2,
        text         >= 0.11     && < 0.12,
        transformers >= 0.2      && < 0.4

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Tests.hs
    default-language: Haskell2010
    hs-source-dirs: src, tests
    build-depends:
        base,
        bytestring,
        conduit,
        containers,
        free,
        hashable,
        mtl,
        parsec,
        text,
        transformers
